--- a/forgesample/wwwroot/css/style.css
+++ b/forgesample/wwwroot/css/style.css
@@ -6,9 +6,52 @@ body{
 /* this is visual aid to see where is body clear at the end of project */
     background-color: rgb(230, 228, 228);
 }
+
+/* button-color */
 button{
     background-color: rgb(180, 240, 240);
 }
+/* the main container possitioned on center of the screen
+   and 100px from the top. Display flex */
+.divCenter{
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    /* width: 60%; */
+    align-items: center;
+    margin: auto;
+    position: relative;
+    top: 100px;
+}
+/* teamCAD icon pssitioning */
+.panelSetup{
+    padding: 20px;
+}
+
+/* lofin fields possitioning */
+.loginWindow{
+    width: 40%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+/* possitioning of input fields */
+.fieldsPossition{
+    border: 1px solid greenyellow;
+    width: 100%;
+    position: relative;
+    padding: 10px;
+}
+.logInLabel{
+    padding-left: 50px;
+}
+.inputCred{
+    position: absolute;
+    right: 50px;
+    width: 50%;
+    min-width: 80px;
+}
+
 
 #projectSelector, #newBucket{
     display: none;
