--- a/forgesample/wwwroot/css/style.css
+++ b/forgesample/wwwroot/css/style.css
@@ -11,6 +11,11 @@ button{
     background-color: rgb(180, 240, 240);
     width: 100%;
 }
+/* the first screen display proprety */
+.firstWindow{
+    display: none;
+  
+}
 /* the main container possitioned on center of the screen
    and 100px from the top. Display flex */
 .divCenter{
@@ -55,7 +60,46 @@ input{
     display: none;
 }
 
-
+/* the secound window styleing */
 .secondWindow{
-    display: none;
+    /* display: none; */
+    border: 1px solid orangered;
+    width: 100%;
+    
+}
+.leftSide, .rightSide{
+    border: 1px solid grey;
+    border-radius: 3px;
+    margin: 2px;
+    box-shadow: 0 0 2px 2px rgb(211, 210, 210);
+    width: 23%;
+    min-width: 250px;
+    height: 99vh;
+    float: left;
+}
+
+.rightSide{
+    width: 75%;
+    margin: 2px 7px 2px;
+    max-width: calc(98vw - 280px);
+    
+}
+/* content of left side */
+.leftTop{
+    border: 1px solid blue;
+    width: 100%;
+    height: 36%;
+    
+}
+.middleLeft{
+    border: 1px solid purple;
+    width: 100%;
+    height: 14%;
+    padding: 2px 5px;
+}
+.bottomLeft{
+    border: 1px solid greenyellow;
+    width: 100%;
+    height: 50%;
+    
 }
