--- a/forgesample/wwwroot/css/style.css
+++ b/forgesample/wwwroot/css/style.css
@@ -12,24 +12,23 @@ button{
     width: 100%;
 }
 /* the first screen display proprety */
-.firstWindow{
-    display: none;
+#loginPanel {
+    display: block;
   
 }
 /* the main container possitioned on center of the screen
    and 100px from the top. Display flex */
-.divCenter{
-    
+.divCenter{    
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: auto;
-    position: relative;
+    justify-content :center;
     top: 100px;
 }
 /* teamCAD icon pssitioning */
 .panelSetup{
     padding: 20px;
+    width:fit-content;
 }
 .loginWindow, #projectSelector, #newBucket{
     width: 400px;
@@ -60,12 +59,16 @@ input{
     display: none;
 }
 
-/* the secound window styleing */
+/* the secound window styling */
+
+#visualPanel {
+    display: none;
+}
+
 .secondWindow{
-    /* display: none; */
-    border: 1px solid orangered;
-    width: 100%;
     
+    border: 1px solid orangered;
+    width: 100%;    
 }
 .leftSide, .rightSide{
     border: 1px solid grey;
