--- a/forgesample/wwwroot/css/style.css
+++ b/forgesample/wwwroot/css/style.css
@@ -16,7 +16,7 @@ button{
 
 /* the first screen display proprety */
 .firstWindow{
-    /* display: none; */
+    display: block;
     margin-top: 100px;
   
 }
