--- a/forgesample/wwwroot/css/style.css
+++ b/forgesample/wwwroot/css/style.css
@@ -6,6 +6,10 @@ body{
 
 }
 
+.fill {
+    height: 100vh ;
+}
+
 /* button-color */
 button{
     background-color: rgb(180, 240, 240);
@@ -65,13 +69,9 @@ input{
 .secondWindow{
     display: none;
     border: 1px solid orangered;
-    width: 100%;
-    
+    overflow: hidden;
 }
 .leftSide, .rightSide{
-    border: 1px solid grey;
-    border-radius: 3px;
-    margin: 2px;
     box-shadow: 0 0 2px 2px rgb(211, 210, 210);
     width: 23%;
     min-width: 250px;
@@ -85,6 +85,11 @@ input{
     max-width: calc(98vw - 280px);
     
 }
+
+#forgeViewer {
+    width: 100%;
+}
+
 /* content of left side */
 .leftTop{
     border: 1px solid blue;
