--- a/WebEdgeClassification/wwwroot/css/style.css
+++ b/WebEdgeClassification/wwwroot/css/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    background-color: #f1ecd0;
 }
 
 .fill {
@@ -11,10 +12,15 @@ body {
 
 /* button-color */
 button {
-    background-color: rgb(180, 240, 240);
+    background-color: #B46490;
     width: 100%;
     display: block;
     margin: auto;
+    color: #f1ecd0;
+    font-size: 16px;
+}
+.loginBtn{
+    margin-top:5px;
 }
 
 /* the first screen display proprety */
@@ -49,16 +55,22 @@ button {
 
 label {
     width: 150px;
+    font-size: 16px;
 }
 
 input {
     width: 280px;
     float: right;
+    background-color: #e3d9e0 !important;
+    font-size: 18px !important;
+   
 }
 
 .selectCred {
     width: 280px;
     float: right;
+    font-size: 18px;
+    padding: 3px
 }
 
 #projectSelector, #newBucket {
@@ -68,7 +80,7 @@ input {
 /* the secound window styleing */
 .secondWindow {
     display: none;
-    border: 1px solid orangered;
+    /*border: 1px solid orangered;*/
     overflow: hidden;
 }
 
@@ -89,7 +101,7 @@ input {
 .layerListContainer{
     width: 100%;
     height: 50px;
-    border: 1px gray solid;
+    /*border: 1px gray solid;*/
     padding: 8px;
 }
 .layerInput{
@@ -111,30 +123,26 @@ input {
     right: 23px;
 }
 
-.clrWindow{
-    display: none;
-}
-
 #forgeViewer {
     width: 100%;
 }
 
 /* content of left side */
 .leftTop {
-    border: 1px solid blue;
+    /*border: 1px solid blue;*/
     width: 100%;
     height: 36%;
 }
 
 .middleLeft {
-    border: 1px solid purple;
+    /*border: 1px solid purple;*/
     width: 100%;
-    height: 14%;
+    height: 16%;
     padding: 2px 5px;
 }
 
 .bottomLeft {
-    border: 1px solid greenyellow;
+    /*border: 1px solid greenyellow;*/
     width: 100%;
     height: 50%;
 }
